--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,13 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+ApiKeys.*
+
 ## Build generated
 build/
 DerivedData/
 
-ApiKeys*
+
 
 ## Various settings
 *.pbxuser
